# Red-Smoke

./: .gitignore  README.md
client/: package-lock.json
client/src/components/: HelloWorld.vue
server/: config.py  pyproject.toml
server/src/: app.py
