[tool.poetry]
name = "red-smoke"
version = "0.1.0"
description = "A personal and easy to use cloud"
authors = ["Wachamuli <josemrr27@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
Flask = "^2.1.1"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.1"
MarkupSafe = "^2.1.1"
python-dotenv = "^0.20.0"
Werkzeug = "^2.1.1"
Flask-Cors = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
